[FIX] website_sale: fix `float` issue
This commit fixes a layout issue inside the eCommerce categories form
view on mobile devices.

Prior to this commit, a `.oe_left` class was applied to the content of
the sheet, moving it "out of the flow", resulting in a wrong sized
`form_sheet`.

To fix the issue, we have to provide a CSS workaround to modify the view
without modifying the XML directly. To do so, we set a `float:none` that
will cancel the utility class, and we apply a `.col-md-6` and a `.pe-3`
class to ensure that the labels are not placed right next to the image
in mobile and the layout doesn't take the full width on larger devices.

task-3847917

closes odoo/odoo#162034

--- a/addons/website_sale/static/src/scss/website_sale_backend.scss
+++ b/addons/website_sale/static/src/scss/website_sale_backend.scss
@@ -65,3 +65,16 @@
         }
     }
 }
+
+// This is an ugly workaround to prevent the div content from overflowing
+.o_form_view div.oe_left {
+    float: none !important;
+
+    .o_inner_group {
+        padding-right: $spacer;
+
+        @include media-breakpoint-up(md) {
+            width: 50%;
+        }
+    }
+}
